# react-native-godot

./: .gitignore  LICENSE  README.md  export_presets.cfg  gen-pck.sh
example/: .eslintrc.js  README.md  app.json  babel.config.js  metro.config.js  package.json  react-native.config.js
example/android/: build.gradle  gradlew  link-assets-manifest.json
example/ios/: Gemfile  Podfile  project.godot
example/ios/example/: Info.plist  PrivacyInfo.xcprivacy
example/ios/example.xcodeproj/: project.pbxproj
example/src/: App.tsx  Root.tsx  Routes.tsx
example/src/Screens/: CubesExample.tsx  EarthExample.tsx  Home.tsx
example/src/Utils/: SolarCalculator.ts  withPreventGoBack.tsx
example/src/assets/: earth.pck  project.godot
expo-example/: App.tsx  README.md  app.json  metro.config.js  package.json  tsconfig.json  xcode-bundle-resources-plugin.js
expo-example/android/: settings.gradle
expo-example/android/app/: build.gradle
expo-example/godot/: cube.pck
expo-example/ios/: Podfile
expo-example/ios/ReactNativeGodotExpoExample/: Info.plist
expo-example/ios/ReactNativeGodotExpoExample.xcworkspace/: contents.xcworkspacedata
expo-example/plugins/: with-assets.js
expo-example/src/: Root.tsx  useAsset.ts
package/: package.json  react-native-godot-0.0.5.tgz  react-native-godot-utils.rb  react-native-godot.podspec  tsconfig.json
package/android/: build.gradle  gradle.properties
package/android/src/main/: AndroidManifest.xml
package/android/src/main/cpp/: CMakeLists.txt
package/ios/: GodotModule.mm
package/lib/commonjs/: GodotProvider.js  GodotProvider.js.map  index.js  index.js.map
package/lib/commonjs/specs/: GodotViewNativeComponent.js  GodotViewNativeComponent.js.map  NativeGodotModule.js  NativeGodotModule.js.map
package/lib/commonjs/types/: Node.js.map  index.js  index.js.map
package/lib/commonjs/variants/: AABB.js  AABB.js.map  Basis.js  Basis.js.map  Color.js  Color.js.map  Plane.js  Plane.js.map  Projection.js  Projection.js.map  Quaternion.js  Quaternion.js.map  Rect2.js  Rect2.js.map  Rect2i.js  Rect2i.js.map  Transform2D.js  Transform2D.js.map  Transform3D.js.map  Vector2.js  Vector2.js.map  Vector2i.js  Vector2i.js.map  Vector3.js  Vector3.js.map  Vector3i.js  Vector3i.js.map  Vector4.js  Vector4.js.map  Vector4i.js  Vector4i.js.map
package/lib/commonjs/views/: Godot.js  Godot.js.map  GodotView.js  GodotView.js.map  GodotViewNativeId.js  api.js  api.js.map  (+3 more)
package/lib/module/: GodotProvider.js  GodotProvider.js.map  index.js  index.js.map
package/src/: GodotProvider.tsx  NativeSetup.ts  index.ts
package/src/specs/: GodotViewNativeComponent.ts  NativeGodotModule.ts
package/src/types/: Node.tsx  index.ts
package/src/variants/: AABB.ts  Basis.ts  Color.ts  Plane.ts  Projection.ts  Quaternion.ts  Rect2.ts  Rect2i.ts  Transform2D.ts  Transform3D.ts  Vector2.ts  Vector2i.ts  Vector3.ts  Vector3i.ts  Vector4.ts  Vector4i.ts
package/src/views/: Godot.tsx  GodotView.tsx  GodotViewNativeId.ts  api.ts  index.ts  types.ts
(+218 files in other folders)
